Name:                kestrel
Version:             0.4
License:             BSD3
License-file:        LICENSE
Author:              Katsutoshi Itoh
Maintainer:          cutsea110@gmail.com
Synopsis:            the yesod web application.
Description:         a WIKI clone written in haskell.
Category:            Web
Stability:           Experimental
Cabal-version:       >=1.6
Build-type:          Simple
Homepage:            https://github.com/cutsea110/Kestrel

Flag dev
     Description:   Build for use with "yesod devel"
     Default:       False

Flag library-only
     Description:   Build the production executable.
     Default:       False

library
     if flag(library-only)
         Buildable: True
     else
         Buildable: False

     exposed-modules: Application
     other-modules: Foundation
                    Model
                    Settings
                    Settings.Development
                    Settings.StaticFiles
                    Handler.Root
                    Handler.Profile
                    Handler.Wiki
                    Handler.S3
                    Handler.Admin
                    Kestrel.Helpers.Util

     ghc-options:   -Wall -threaded -O0
     cpp-options:   -DDEVELOPMENT

executable kestrel
     if flag(library-only)
         Buildable: False

     if flag(dev)
         cpp-options: -DDEVELOPMENT
         ghc-options: -Wall -threaded -O0
     else
         ghc-options: -Wall -threaded -O0

     main-is: main.hs
    
     build-depends: base         >= 4       && < 5
                  , HTTP         >= 4000.2
                  , yesod        >= 1.2     && < 1.3
                  , yesod-core   >= 1.2     && < 1.3
                  , yesod-auth   >= 1.2     && < 1.3
                  , yesod-static >= 1.2     && < 1.3
                  , yesod-default >= 1.2    && < 1.3
                  , yesod-form   >= 1.3     && < 1.4
                  , yesod-newsfeed >= 1.2   && < 1.3
                  , yesod-sitemap >= 1.2    && < 1.3
                  , yesod-pnotify >= 0.4    && < 0.5
                  , mime-mail
                  , wai           >= 1.4    && < 1.5
                  , wai-extra     >= 1.3    && < 1.4
                  , yaml          >= 0.8    && < 0.9
                  , http-conduit  >= 1.9    && < 1.10
                  , directory
                  , bytestring
                  , text
                  , persistent   >= 1.2     && < 1.3
                  , persistent-postgresql >= 1.2 && < 1.3
                  , persistent-template >= 1.2 && < 1.3
                  , http-types
                  , template-haskell
                  , hamlet
                  , language-javascript >= 0.5 && < 0.6
                  , hjsmin       >= 0.1  && < 0.2
                  , pandoc       >= 1.11 && < 1.12
                  , pandoc-types >= 1.10 && < 1.11
                  , utility-ht
                  , Diff         >= 0.3   && < 0.4
                  , transformers
                  , warp
                  , filepath
                  , thumbnail    >= 0.7 && < 0.8
                  , time         >= 1.1     && < 2.0
                  , old-locale
                  , containers   >= 0.5     && < 0.6
                  , parsec       >= 3.1     && < 3.2
                  , xhtml        >= 3000.2  && < 4000.0
                  , SHA          >= 1.6 && < 1.7
                  , shakespeare-text
                  , shakespeare-js
                  , shakespeare-css
                  , blaze-html   >= 0.6     && < 0.7
                  , blaze-markup >= 0.5     && < 0.6
                  , clientsession
                  , utf8-string  >= 0.3.7   && < 0.4
                  , data-default >= 0.5     && < 0.6
                  , conduit      >= 1.0     && < 1.1
                  , aeson >= 0.6 && < 0.7
                  , crypto-pubkey >= 0.1 && < 0.2
                  , monad-logger >= 0.3 && < 0.4
                  , fast-logger >= 0.3 && < 0.4
                  , owl-auth >= 0.2 && < 0.3
