Name:                kestrel
Version:             0.4
License:             BSD3
License-file:        LICENSE
Author:              Katsutoshi Itoh
Maintainer:          cutsea110@gmail.com
Synopsis:            the yesod web application.
Description:         a WIKI clone written in haskell.
Category:            Web
Stability:           Experimental
Cabal-version:       >=1.8
Build-type:          Simple
Homepage:            https://github.com/cutsea110/Kestrel

Flag dev
     Description:   Build for use with "yesod devel"
     Default:       False

Flag library-only
     Description:   Build the production executable.
     Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.Development
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Profile
                     Handler.Wiki
                     Handler.S3
                     Handler.Admin
                     Kestrel.Helpers.Util

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                TypeSynonymInstances
                FlexibleInstances
                TupleSections
                DeriveDataTypeable
                Rank2Types


    build-depends: base         >= 4       && < 5
                 , containers   >= 0.5     && < 0.6
                 , HTTP         >= 4000.2
                 , yesod        >= 1.2     && < 1.3
                 , yesod-core   >= 1.2     && < 1.3
                 , yesod-auth   >= 1.3     && < 1.4
                 , yesod-static >= 1.2     && < 1.3
                 , yesod-default >= 1.2    && < 1.3
                 , yesod-form   >= 1.3     && < 1.4
                 , yesod-newsfeed >= 1.2   && < 1.3
                 , yesod-sitemap >= 1.2    && < 1.3
                 , yesod-pnotify >= 0.4    && < 0.6
                 , mime-mail
                 , wai           >= 1.4    && < 4.0
                 , wai-extra     >= 1.3    && < 4.0
                 , wai-logger    >= 2.0    && < 3.0
                 , yaml          >= 0.8    && < 0.9
                 , http-conduit  >= 1.9    && < 3.0
                 , directory
                 , bytestring
                 , text
                 , persistent    >= 1.3    && < 1.4
                 , persistent-postgresql >= 1.3 && < 1.4
                 , persistent-template >= 1.3 && < 1.4
                 , http-types
                 , template-haskell
                 , hamlet       >= 1.2  && < 1.3
                 , language-javascript >= 0.5 && < 0.6
                 , hjsmin       >= 0.1  && < 0.2
                 , pandoc       >= 1.11 && < 1.14
                 , pandoc-types >= 1.10 && < 1.13
                 , utility-ht
                 , Diff         >= 0.3   && < 0.4
                 , transformers
                 , warp
                 , filepath
                 , thumbnail    >= 0.7 && < 0.9
                 , time         >= 1.1     && < 2.0
                 , old-locale
                 , parsec       >= 3.1     && < 3.2
                 , xhtml        >= 3000.2  && < 4000.0
                 , SHA          >= 1.6 && < 1.7
                 , shakespeare  >= 2.0 && < 2.1
                 , shakespeare-text >= 1.1 && < 1.2
                 , shakespeare-js >= 1.3 && < 1.4
                 , shakespeare-css >= 1.1 && < 1.2
                 , blaze-html   >= 0.7     && < 0.8
                 , blaze-markup >= 0.6     && < 0.7
                 , clientsession
                 , utf8-string  >= 0.3.7   && < 0.4
                 , data-default >= 0.5     && < 0.6
                 , conduit      >= 1.1     && < 1.2
                 , aeson >= 0.7 && < 0.8
                 , crypto-pubkey >= 0.1 && < 0.3
                 , monad-logger >= 0.3 && < 0.4
                 , fast-logger >= 0.3 && < 3.0
                 , owl-auth >= 0.2 && < 0.4
                 , xml-conduit >= 1.2 && < 1.3
                 , xml-hamlet >= 0.4 && < 0.5

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable kestrel
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                      , kestrel
                      , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N
    
test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , kestrel
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-default
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
