Name:                kestrel
Version:             0.5
License:             BSD3
License-file:        LICENSE
Author:              Katsutoshi Itoh
Maintainer:          cutsea110@gmail.com
Synopsis:            the yesod web application.
Description:         a WIKI clone written in haskell.
Category:            Web
Stability:           Experimental
Cabal-version:       >=1.8
Build-type:          Simple
Homepage:            https://github.com/cutsea110/Kestrel

Flag dev
     Description:   Build for use with "yesod devel"
     Default:       False

Flag library-only
     Description:   Build the production executable.
     Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Root
                     Handler.Profile
                     Handler.Wiki
                     Handler.S3
                     Handler.Admin
                     Kestrel.Helpers.Util

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                TypeSynonymInstances
                Rank2Types
                PackageImports


    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.3
                 , persistent-postgresql         >= 2.1.1      && < 2.3
                 , persistent-template           >= 2.0        && < 2.3
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.3
                 , data-default
                 , aeson                         >= 0.6        && < 0.10
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time

                 , Diff         >= 0.3   && < 0.4
                 , HTTP         >= 4000.2
                 , blaze-markup >= 0.6     && < 0.8
                 , crypto-pubkey >= 0.1 && < 0.3
                 , filepath
                 , pandoc       >= 1.11 && < 1.16
                 , pandoc-types >= 1.10 && < 1.13
                 , thumbnail    >= 0.7 && < 0.9
                 , utf8-string  >= 0.3.7   && < 1.1
                 , utility-ht
                 , wai           >= 1.4    && < 4.0
                 , xml-conduit >= 1.2 && < 1.4
                 , xml-hamlet >= 0.4 && < 0.5
                 , yesod-newsfeed >= 1.2   && < 1.6
                 , yesod-sitemap >= 1.2    && < 1.5

                 , owl-auth >= 0.2 && < 0.5
                 , yesod-pnotify >= 0.4    && < 0.7

executable kestrel
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                      , kestrel
                      , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N
    
test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , kestrel
                 , yesod-test >= 1.4.3 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
